@@ -14,7 +14,7 @@ include_HEADERS = $(addprefix include/security/, _pam_compat.h _pam_macros.h _pa
 
 noinst_HEADERS = pam_prelude.h pam_private.h pam_tokens.h
 
-libpam_la_LDFLAGS = -no-undefined -version-info 1:0:0
+libpam_la_LDFLAGS = -no-undefined -version-info 81:0:81
 if HAVE_VERSIONING
   libpam_la_LDFLAGS += -Wl,--version-script=libpam.map
 endif
