@@ -77,7 +77,11 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
 * pam_securetty: Be fail-close on user lookups, always log failures,
   not just with "debug" (Solar Designer)
 * Add gettext support
-* Add translations for cs, hu, nb, pa and pt
+* Add translations for cs, de, es, fr, hu, it, ja, nb, pa, pt_BR,
+  pt, zh_CN and zh_TW
+* pam_limits: Apply ALT-Linux/OWL patch
+* pam_motd: Apply ALT-Linux/OWL patch
+* libpam: Cache pam_get_user() failures
 
 0.80: Wed Jul 13 13:23:20 CEST 2005
 * pam_tally: test for NULL data before dereferencing them (t8m)
